--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <div class="Box Portfolio" id="Portfolio"><!--Agregue el id por que sino no me tomaba el link a la seccion usando class-->
       <h3 class="Subtitulo">Portfolio</h3>
       <ul class="Listas">
-        <li class="img1"><img src="img/cv-icon.png" width="150" height="150"/></li>
-        <li class="img1"><img src="img/rompecabezas-icon.png" width="150" height="150"/></li>
+        <li class="img1"><a href="index.html"><img src="img/cv-icon.png" alt="Portfolio" width="150" height="150"/></a></li>
+        <li class="img1"><a href="home-banking/index.html"><img src="img/home-banking-icon.png" alt="Home Banking" width="150" height="150"/></a></li>
+        <li class="img1"><a href="rompecabezas/juego.html"><img src="img/rompecabezas-icon.png" alt="Rompecabezas" width="150" height="150"/></a></li>
         <li class="img1"><img src="img/pixel-art-icon.png" width="150" height="150"/></li>
         <li class="img1"><img src="img/ciudad-zombie-icon.png" width="150" height="150"/></li>
         <li class="img1"><img src="img/recargado-icon.png" width="150" height="150"/></li>
