--- a/rompecabezas/juego.html
+++ b/rompecabezas/juego.html
@@ -31,19 +31,19 @@
     </div>
     <div class="col-60">
       <div id="juego">
-        <div id="pieza1" class="estilado"><img src="images/10.jpg" width="100%" height="100%"></div>
-        <div id="pieza2" class="estilado"><img src="images/20.jpg" width="100%" height="100%"></div>
-        <div id="pieza3" class="estilado"><img src="images/30.jpg" width="100%" height="100%"></div>
-        <div id="pieza4" class="estilado"><img src="images/40.jpg" width="100%" height="100%"></div>
-        <div id="pieza5" class="estilado"><img src="images/50.jpg" width="100%" height="100%"></div>
-        <div id="pieza6" class="estilado"><img src="images/60.jpg" width="100%" height="100%"></div>
-        <div id="pieza7" class="estilado"><img src="images/70.jpg" width="100%" height="100%"></div>
-        <div id="pieza8" class="estilado"><img src="images/80.jpg" width="100%" height="100%"></div>
+        <div id="pieza1" class="estilado"><img src="images/10.jpg"></div>
+        <div id="pieza2" class="estilado"><img src="images/20.jpg"></div>
+        <div id="pieza3" class="estilado"><img src="images/30.jpg"></div>
+        <div id="pieza4" class="estilado"><img src="images/40.jpg"></div>
+        <div id="pieza5" class="estilado"><img src="images/50.jpg"></div>
+        <div id="pieza6" class="estilado"><img src="images/60.jpg"></div>
+        <div id="pieza7" class="estilado"><img src="images/70.jpg"></div>
+        <div id="pieza8" class="estilado"><img src="images/80.jpg"></div>
         <div id="pieza9" class="estilado"></div>
       </div>
     </div>
     <div id="footer">
-      <p>Footer</p>
+      <p>Desarrollado por Patricio Llorens</p>
     </div>
     <script src="js/juego.js"></script>
   </body>
