--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li class="img1"><a href="home-banking/index.html"><img src="img/home-banking-icon.png" alt="Home Banking" width="150" height="150"/></a></li>
         <li class="img1"><a href="rompecabezas/juego.html"><img src="img/rompecabezas-icon.png" alt="Rompecabezas" width="150" height="150"/></a></li>
         <li class="img1"><a href="pixel-art/index.html"><img src="img/pixel-art-icon.png" alt="Pixel Art" width="150" height="150"/></a></li>
-        <li class="img1"><img src="img/ciudad-zombie-icon.png" width="150" height="150"/></li>
+        <li class="img1"><a href="ciudad-zombie/juego.html"><img src="img/ciudad-zombie-icon.png" alt="Ciudad Zombie" width="150" height="150"/></a></li>
         <li class="img1"><img src="img/recargado-icon.png" width="150" height="150"/></li>
         <li class="img1"><img src="img/encuestados-icon.png" width="150" height="150"/></li>
         <li class="img1"><img src="img/mapa-interactivo-icon.png" width="150" height="150"/></li>
